# rk3588_detpics

./: CMakeLists.txt  README.md  build_cross_aarch64.sh
build_aarch64/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  run.sh
build_aarch64/3rdparty.out/: Makefile  cmake_install.cmake
build_aarch64/utils.out/: Makefile  cmake_install.cmake
include/: postprocess.h  yolov8.h
model/: yolov8.rknn
src/: main.cc  postprocess.cc  yolov8.cc
utils/: CMakeLists.txt  image_utils.c  image_utils.h
